--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
-    <title>BCIT TEST APP</title>
+    <title>Docx to Html Converter</title>
     <script src="index.js"></script>
     <script>
       function test(input) {
@@ -17,22 +17,7 @@
       }
 	</script>
 	<style>
-		.banner {
-    overflow: auto;
-    margin-bottom: 20px;
-    background-color: #555;
-    color: #fff;
-}
 
-.banner a {
-    color: #fff;
-}
-
-.banner h1 {
-    font-size: 20px;
-    line-height: 2;
-    margin: 0.5em 0;
-}
 	</style>
   </head>
   <body>
