--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
     <title>Docx to Html Converter</title>
+    <link rel="stylesheet" href="./style.css" />
     <script src="index.js"></script>
     <script>
       function test(input) {
@@ -15,22 +16,30 @@
           text.value = converted.toString();
         });
       }
-	</script>
-	<style>
-
-	</style>
+    </script>
+    <style></style>
   </head>
   <body>
-	<div class="banner">
-		<div class="container">
-		  <h1><a href="/">BCIT : Docx to HTML APP</a></h1>
-		</div>
-	  </div>
+    <div class="header">
+      <a href="/" class="img">
+        <img class="" src="bcit.png" width="50" height="50">
+      </a>
+      <div class="header-right">
+        <a class="active" href="https://www.bcit.ca/">Home</a>
+        <!-- <a href="#contact">Contact</a>
+        <a href="#about">About</a> -->
+      </div>
+    </div>
 
-    <input
-      type="file"
-      style="position: absolute; top: 30;"
-      onchange="test(this)"
-    />
+    <div style="padding-left: 20px;">
+      <h3>
+        **docx_to_html_converter** is a javascript converter from docx to html.
+      </h3>
+    </div>
+
+    <div class="upload-btn-wrapper">
+      <button class="btn">Upload a docx file</button>
+      <input type="file" name="myfile" onchange="test(this)" />
+    </div>
   </body>
 </html>
